--- a/package.json
+++ b/package.json
@@ -16,22 +16,28 @@
   "homepage": "https://github.com/Br3n0k/friend-cine#readme",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "npm run dev:all",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
     "server": "node server/index.js",
     "dev:server": "nodemon server/index.js",
-    "dev:all": "concurrently \"npm run dev:server\" \"npm run dev\"",
-    "setup": "node install-ffmpeg.js",
-    "check-ffmpeg": "node install-ffmpeg.js --check",
-    "install-ffmpeg": "node install-ffmpeg.js",
-    "test-system": "node test-system.js",
-    "restart": "npm run dev:all",
+    "dev:frontend": "astro dev",
+    "dev:all": "concurrently \"npm run dev:server\" \"npm run dev:frontend\"",
+    "setup": "npm run install-ffmpeg && npm run check-system",
+    "install-ffmpeg": "node scripts/install-ffmpeg.js",
+    "check-ffmpeg": "node scripts/install-ffmpeg.js --check",
+    "check-system": "node scripts/test-system.js",
+    "test": "npm run check-system",
+    "test:codec": "node -p \"console.log('🧪 Acesse: http://localhost:3000/dev/test-codec.html')\"",
+    "test:connection": "node -p \"console.log('🧪 Acesse: http://localhost:3000/dev/test-connection.html')\"",
     "lint": "astro check",
-    "clean": "rm -rf dist .astro node_modules/.astro",
+    "clean": "rm -rf dist .astro node_modules/.astro storage/temp/* storage/processing/*",
+    "clean:storage": "rm -rf storage/uploads/* storage/processing/* storage/temp/*",
+    "clean:all": "npm run clean && npm run clean:storage",
     "docker:build": "docker build -t friend-cine .",
-    "docker:run": "docker run -p 3000:3000 -p 4000:4000 friend-cine"
+    "docker:run": "docker run -p 3000:3000 -p 4000:4000 -v $(pwd)/storage:/app/storage friend-cine",
+    "postinstall": "npm run setup"
   },
   "dependencies": {
     "@astrojs/node": "^9.2.2",
