Atualiza o .env.example e package.json para suportar conversão automática de vídeos MKV com H.265/FLAC. Adiciona novas variáveis de configuração, scripts de instalação e melhorias no instalador do FFmpeg. Refatora o sistema de teste para verificar codecs e estrutura de armazenamento. Melhora a documentação e mensagens de log para facilitar a manutenção e uso do sistema.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Friend Cine - Configurações do Ambiente
+# Friend Cine MKV - Configurações do Ambiente
 
 # Servidor Backend
 PORT=4000
@@ -9,27 +9,60 @@ FRONTEND_URL=http://localhost:3000
 BACKEND_URL=http://localhost:4000
 ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
-# Upload de Arquivos
-MAX_FILE_SIZE=2147483648
-UPLOAD_PATH=./public/videos
-SUBTITLES_PATH=./public/subtitles
+# Sistema de Arquivos MKV (Atualizado)
+MAX_FILE_SIZE=5368709120
+STORAGE_BASE_PATH=./storage
+UPLOAD_PATH=./storage/uploads
+PROCESSING_PATH=./storage/processing
+MASTERS_PATH=./storage/masters
+WEB_PATH=./storage/web
+SUBTITLES_PATH=./storage/subtitles
+THUMBNAILS_PATH=./storage/thumbnails
+METADATA_PATH=./storage/metadata
+TEMP_PATH=./storage/temp
+PUBLIC_VIDEOS_PATH=./public/videos
 
-# FFmpeg
+# FFmpeg MKV
 FFMPEG_PATH=ffmpeg
+ENABLE_H265_ENCODING=true
+ENABLE_FLAC_AUDIO=true
+DEFAULT_CRF=18
+DEFAULT_PRESET=medium
+MAX_CONCURRENT_CONVERSIONS=2
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+UPLOAD_RATE_LIMIT_MAX=5
+CHAT_RATE_LIMIT_MAX=10
 
 # Logging
 LOG_LEVEL=info
-LOG_FILE=./logs/app.log
+LOG_DIR=./logs
+LOG_MAX_SIZE=5242880
+LOG_MAX_FILES=5
 
 # Segurança
 ENABLE_RATE_LIMITING=true
 ENABLE_FILE_VALIDATION=true
+ENABLE_ADVANCED_VALIDATION=true
 ENABLE_CORS=true
+ENABLE_DUPLICATE_CHECK=true
 
 # Limpeza Automática
 AUTO_CLEANUP_ENABLED=true
-AUTO_CLEANUP_MAX_AGE=604800000 
+AUTO_CLEANUP_MAX_AGE=604800000
+TEMP_CLEANUP_INTERVAL=3600000
+
+# Performance MKV
+CHUNK_SIZE=10485760
+JOB_TIMEOUT=10800000
+ENABLE_HARDWARE_ACCELERATION=true
+
+# Qualidade de Vídeo
+DEFAULT_QUALITY_4K=15000k
+DEFAULT_QUALITY_1080P=8000k
+DEFAULT_QUALITY_720P=5000k
+DEFAULT_QUALITY_480P=2500k
+AUDIO_BITRATE_FLAC=1411k
+AUDIO_BITRATE_AAC=320k 
